<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center">

        <View
            android:id="@+id/timeline_left"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.33"
            android:background="@color/colorGraySoft" />

        <View
            android:id="@+id/timeline_left_mid"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.33"
            android:background="@color/colorGraySoft" />

        <View
            android:id="@+id/timeline_right_mid"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.33"
            android:background="@color/colorGraySoft" />
    </LinearLayout>

    <View
        android:id="@+id/timeline_ball_left"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:background="@drawable/round_box_blue" />

    <TextView
        android:id="@+id/timeline_label_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/data_diri"
        android:textColor="@color/colorBlue"
        android:textSize="9sp" />

    <View
        android:id="@+id/timeline_ball_mid"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/round_box_gray" />

    <TextView
        android:id="@+id/timeline_label_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/alamat_ktp"
        android:textColor="@color/colorGraySoft"
        android:textSize="9sp" />

    <View
        android:id="@+id/timeline_ball_right"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_box_gray" />

    <TextView
        android:id="@+id/timeline_label_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:text="@string/review_data"
        android:textColor="@color/colorGraySoft"
        android:textSize="9sp" />
</RelativeLayout>